--- a/Color Toggle/style.css
+++ b/Color Toggle/style.css
@@ -39,3 +39,10 @@
     background-color: #04AA6D;
     color: white;
 }
+
+li {
+    border: solid 3px white;
+    padding: 4px 4px 4px 4px;
+    margin-bottom: 20px;
+    color: white;
+}
